// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render align 1`] = `
<span
  class="components-truncate wp-components-truncate components-text wp-components-text css-1wxp07y"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  Some people are worth melting for.
</span>
`;

exports[`props should render as another element 1`] = `
<div
  class="components-truncate wp-components-truncate components-text wp-components-text css-1j5v64k"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  Some people are worth melting for.
</div>
`;

exports[`props should render color 1`] = `
<span
  class="components-truncate wp-components-truncate components-text wp-components-text css-11b9cfw"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  Some people are worth melting for.
</span>
`;

exports[`props should render correctly 1`] = `
<span
  class="components-truncate wp-components-truncate components-text wp-components-text css-1j5v64k"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  Some people are worth melting for.
</span>
`;

exports[`props should render custom size 1`] = `
<span
  class="components-truncate wp-components-truncate components-text wp-components-text css-14o6hkn"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  Some people are worth melting for.
</span>
`;

exports[`props should render display 1`] = `
<span
  class="components-truncate wp-components-truncate components-text wp-components-text css-104o95s"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  Some people are worth melting for.
</span>
`;

exports[`props should render highlighted words 1`] = `
<span
  class="components-truncate wp-components-truncate components-text wp-components-text css-hr4v4k"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  <span
    class=""
    data-g2-component="Text"
  >
    Some people are 
  </span>
  <mark
    class=" "
    data-g2-component="TextHighlight"
  >
    worth
  </mark>
  <span
    class=""
    data-g2-component="Text"
  >
     melting for.
  </span>
</span>
`;

exports[`props should render highlighted words with highlightCaseSensitive 1`] = `
<span
  class="components-truncate wp-components-truncate components-text wp-components-text css-hr4v4k"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  <span
    class=""
    data-g2-component="Text"
  >
    Some people are worth melting for.
  </span>
</span>
`;

exports[`props should render highlighted words with undefined passed 1`] = `
<span
  class="components-truncate wp-components-truncate components-text wp-components-text css-1j5v64k"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  Some people are worth melting for.
</span>
`;

exports[`props should render isBlock 1`] = `
<span
  class="components-truncate wp-components-truncate components-text wp-components-text css-1jk3501"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  Some people are worth melting for.
</span>
`;

exports[`props should render lineHeight 1`] = `
<span
  class="components-truncate wp-components-truncate components-text wp-components-text css-u1l4v"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  Some people are worth melting for.
</span>
`;

exports[`props should render optimizeReadabilityFor 1`] = `
<span
  class="components-truncate wp-components-truncate components-text wp-components-text css-28rm95"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  Some people are worth melting for.
</span>
`;

exports[`props should render size 1`] = `
<span
  class="components-truncate wp-components-truncate components-text wp-components-text css-nrydup"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  Some people are worth melting for.
</span>
`;

exports[`props should render truncate 1`] = `
<span
  class="components-truncate wp-components-truncate components-text wp-components-text css-18w9o67"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  Some people are worth melting for.
</span>
`;

exports[`props should render upperCase 1`] = `
<span
  class="components-truncate wp-components-truncate components-text wp-components-text css-1qmbsxf"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  Some people are worth melting for.
</span>
`;

exports[`props should render variant 1`] = `
<span
  class="components-truncate wp-components-truncate components-text wp-components-text css-lzynkp"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  Some people are worth melting for.
</span>
`;

exports[`props should render weight 1`] = `
<span
  class="components-truncate wp-components-truncate components-text wp-components-text css-9bfe36"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  Some people are worth melting for.
</span>
`;
